<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" 
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/imagenbienvenidapng"
        android:contentDescription="@string/todo1" />

    <Button
        android:id="@+id/botonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="407dp"
        android:layout_marginBottom="166dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@+id/botonActivity4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonPlay"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="407dp"
        android:layout_marginBottom="166dp"
        android:text="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/botonActivity3"
        app:layout_constraintEnd_toStartOf="@+id/botonStop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonPlay" />

    <Button
        android:id="@+id/botonActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/activity_2"
        android:textColor="#E1BEE7"
        app:layout_constraintBaseline_toBaselineOf="@+id/botonActivity3"
        app:layout_constraintEnd_toStartOf="@+id/botonActivity3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonActivity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="49dp"
        android:text="@string/activity_3"
        android:textColor="#D1C4E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonActivity4"
        app:layout_constraintStart_toEndOf="@+id/botonActivity2"
        app:layout_constraintTop_toBottomOf="@+id/botonPlay" />

    <Button
        android:id="@+id/botonActivity4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="49dp"
        android:text="@string/activity_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonActivity3"
        app:layout_constraintTop_toBottomOf="@+id/botonStop" />

</androidx.constraintlayout.widget.ConstraintLayout>